Implement feature catalog hierarchy with parent-child relationships